--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,8 @@
-# built application files
-*.apk
-*.ap_
+# android folder
+android/
 
-# files for the dex VM
-*.dex
+# logo und images
+graphics
 
 # Java class files
 *.class
-
-# generated files
-bin/
-gen/
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Eclipse project files
-.classpath
-.project
